Removing artifacts and fixing ClaimEntitySubscriber path in services.yml

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,5 +1,4 @@
 parameters:
-    concerto.controller.default_class: Ctrl\Bundle\ConcertoBundle\Controller\DefaultController
     concerto.solos.hostname_solo_class:   Ctrl\Bundle\ConcertoBundle\Solo\HostnameSolo
     concerto.solos.repository_solo_class:   Ctrl\Bundle\ConcertoBundle\Solo\RepositorySolo
     concerto.repository.default_class: Ctrl\Bundle\ConcertoBundle\ORM\Repository\ConcertoEntityRepository
@@ -13,15 +12,6 @@ services:
         synthetic: true
         synchronized: true
 
-    concerto.controller:
-        class: %concerto.controller.default_class%
-        arguments:
-            - @templating
-            - @concerto.repository
-        synchronized: true
-        calls:
-            - [ setSoloist,    [ "@?concerto.soloist=" ] ]
-
     concerto.repository_factory:
         class: %concerto.repository_factory.default_class%
 
@@ -32,8 +22,6 @@ services:
         arguments:
             - @doctrine.orm.entity_manager
             - %concerto.soloist_class%
-
-
 
     concerto.listener.find_soloist:
         class: Ctrl\Bundle\ConcertoBundle\EventListener\FindSoloistListener
@@ -53,20 +41,6 @@ services:
             - { name: kernel.event_listener, event: soloist.found, method: onSoloistFound }
 
     concerto.subscriber.claim_entity:
-        class: Ctrl\Bundle\ConcertoBundle\EventListener\ClaimEntitySubscriber
+        class: Ctrl\Bundle\ConcertoBundle\EventSubscriber\ClaimEntitySubscriber
         tags:
             - { name: doctrine.event_subscriber}
-
-    #concerto.solos.hostname_solo:
-    #    class: %concerto.solos.hostname_solo_class%
-        #factory_service: concerto.solo_factory
-        #factory_method: createSolo
-    #    arguments:
-    #        - @concerto.repository
-    #        - %concerto.solos.hostname_solo.soloist_field%
-
-    concerto.solos.repository_solo:
-        class: Ctrl\Bundle\ConcertoBundle\Solo\RepositorySolo
-        arguments:
-            - @engine_tenant.repository.client
-            - forDomain
