--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_script:
   - composer install
 
 script:
-  - ./vendor/bin/phpunit
+  - ./vendor/bin/phpunit --testdox
 
 addons:
     code_climate:
