--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ before_script:
 script:
   - ./vendor/bin/phpunit --testdox
 
+after_script:
+  - vendor/bin/test-reporter
+
 addons:
     code_climate:
         repo_token: 6ddc69817dac07e1354bc81cb196703490728693518ab2dae62d03e2fa3dca93
